# Neural-Voices-Speech-Dispatcher

./: .gitignore  CMakeLists.txt  README.md  README.ru.md  build.sh  dependencies.txt  install.sh  neuralvoices-linux-x64  neuralvoices.conf  setup.sh  test.ssml
libs/: .signature.p7s  LICENSE.txt  Microsoft.CognitiveServices.Speech.Extension.Embedded.TTS.nuspec  Microsoft.CognitiveServices.Speech.Extension.ONNX.Runtime.nuspec  Microsoft.CognitiveServices.Speech.nuspec  [Content_Types].xml  readme.md
libs/_rels/: .rels
libs/runtimes/linux-arm64/lib/netstandard2.0/: Microsoft.CognitiveServices.Speech.csharp.xml
sd_module/: config.cpp  config.hpp  sd_module.cpp  speech_synthesizer_utils.cpp  speech_synthesizer_utils.hpp  split_string.cpp  split_string.hpp  ssml_preprocessor.cpp  ssml_preprocessor.hpp  text_to_speech_service.cpp  text_to_speech_service.hpp
